# Customer-Service-AI-Agent

./: .coverage  .dockerignore  .env  .env.docker  .env.example  .gitignore  CLAUDE.md  CODEBASE_STATUS_REPORT.md  Coding Execution Plan v3.md  Coding Execution Plan.md  Coding_Execution_Plan_v3_Authoritative_Statements.md  Customer Service AI Agent Proposal.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.alternative  Dockerfile.alternative.md  Dockerfile.bak  Makefile  PHASE5_VALIDATION.md  PHASE6_VALIDATION.md  PRD_v4_Authoritative_Requirements.md  Project Requirements Document v2.md  Project Requirements Document v3.md  Project Requirements Document v4.md  Project Requirements Document.md  README.md  Solution Blueprint v2.md  Solution Blueprint v3.5.md  Solution Blueprint v3.md  Solution Blueprint v4.md  Solution Blueprint.md  TRACEABILITY_MATRIX_ANALYSIS.md  codebase_actual_files_list.txt  codebase_completion_assessment_report.md  codebase_review_plan.md  codebase_status_review.md  codebase_status_update_plan.md  current_installed_python_packages.txt  database schema v2.md  database schema v2.sql  (+20 more)
docker/: Makefile  docker_explain.md  docker_howto.md  docker_patch-2.md  docker_patch.md  review_docker_config.md  troubleshoot_docker-2.md  troubleshoot_docker-3.md  troubleshoot_docker-4.md  troubleshoot_docker.md
docs/: AI_response.md  Improvements in v2.md  costs.md  fix_docker_build_error.md  gpt-1.md  opus-1.md  opus-2.md  opus-4.md  opus-5.md  opus-6.md  opus-7.md  opus-8.md  prompt_to_build.md  prompt_to_compare.md  prompt_to_create.md  prompt_to_improve.md  (+7 more)
kimi/: 9.md  (+18 more)
(+131 files in other folders)
