[project]
name = "ai-customer-service-agent"
version = "0.1.0"
description = "AI-Powered Customer Service Agent for Salesforce"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
  { name = "AI Agent Team" }
]
license = { text = "Proprietary" }
keywords = ["fastapi", "ai", "salesforce", "customer-service", "nlp"]

# Runtime dependencies for Phase 1 core infra
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",
  "PyJWT>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "cryptography>=42.0.7",
  "python-json-logger>=2.0.7",
  "uvloop (>=0.21.0,<0.22.0)",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pip-audit>=2.7.3",
  "bandit>=1.7.9",
]

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "N", "S"]
ignore = ["E203", "E266", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
